@@ -343,3 +343,4 @@ d= TruncatedDistribution(Exponential(lambda = 1, gamma = 2), bounds = [2.5, 65])
 d= TruncatedDistribution(TruncatedDistribution(WeibullMin(beta = 1, alpha = 1, gamma = 0), bounds = [1.5, 7.8]), bounds = [2.5, 6]) simplified= TruncatedDistribution(WeibullMin(beta = 1, alpha = 1, gamma = 0), bounds = [2.5, 6])
 d= TruncatedDistribution(Beta(alpha = 1.5, beta = 6.3, a = -1, b = 2), bounds = [-2.5, 6]) simplified= Beta(alpha = 1.5, beta = 6.3, a = -1, b = 2)
 after setbounds q@0.9= [29.628]
+proba=0.001382
